# percolator-prog

./: AUDIT.md  Cargo.toml  LOBSTER_TEAM_6.md  README.md  hlock.md  kani_audit.md  security.md
.github/workflows/: mobile.yml
mobile/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mobile/ios/PercolatorAgent/: PercolatorAgentApp.swift
mobile/ios/PercolatorAgent/Models/: Agent.swift
mobile/ios/PercolatorAgent/Services/: APIClient.swift  Settings.swift
mobile/ios/PercolatorAgent/Views/: ExplorerView.swift  MintView.swift  RegisterView.swift  RootView.swift  SettingsView.swift
mobile/src/cli/: index.ts
mobile/src/core/: agents.ts  config.ts  helius.ts  registerCli.ts
mobile/src/server/: index.ts  routes.ts
mobile/src/telegram/: bot.ts
mobile/test/: core.test.ts
scripts/: security.md
src/: percolator.rs
tests/: cu_benchmark.rs  i128_alignment.rs  integration.rs  kani.rs  lobster6_swarm.rs  test_a1_siphon_regression.rs  test_admin.rs  test_basic.rs  test_conservation.rs  test_economic_attack_vectors.rs  test_envelope_gate.rs  test_insurance.rs  test_oracle.rs  test_resolution.rs  test_risk_buffer.rs  test_security.rs  test_tradecpi.rs  unit.rs
tests/common/: mod.rs
upstream/metaplex-mpl-agent-registry/: README.md
upstream/metaplex-mpl-agent-registry/examples/multi-client-agent/: .env.example  README.md  package.json  tsconfig.json
upstream/metaplex-mpl-agent-registry/examples/multi-client-agent/src/: cli.ts  core.ts  server.ts  telegram.ts
