[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/percolator.rs"

[features]
no-entrypoint = []
test-sbf = []
cu-audit = []  # Enable compute unit checkpoints for CU auditing
kani = []
# Deployment-size tiers — forward to the engine crate. Only one of
# `small` / `medium` should be set; leaving both off uses the engine's
# default (MAX_ACCOUNTS=4096). Both the BPF binary and the test
# harness honor these flags so tests run against the same size tier
# as the deployed program.
small = ["percolator/small"]
medium = ["percolator/medium"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10"
# pythnet-sdk (no default features) exposes the canonical
# PriceFeedMessage struct used inside Pyth Solana Receiver's
# PriceUpdateV2 account. Using this official struct's BorshDeserialize
# swaps the prior hand-rolled fixed-offset parser for a compile-time
# typed binding: any breaking layout change on the Pyth side produces a
# build error (missing/reordered fields) or a deserialize error at
# runtime, rather than silent garbage reads. Pulled with
# no-default-features to keep the transitive closure light (~52 crates,
# no Anchor).
pythnet-sdk = { version = "2.3", default-features = false }
# pythnet-sdk uses borsh 0.10 internally; pin the same major so our
# direct use of BorshDeserialize on its types reads/writes the same
# wire format.
borsh = { version = "0.10", default-features = false }
pinocchio = "0.6"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
percolator = { git = "https://github.com/aeyakovenko/percolator", rev = "5940285737b514af4416cd8394773abc79e6366d" }

[dev-dependencies]
bincode = "1"
solana-sdk = "1.18"
solana-client = "1.18"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
litesvm = "0.1"
shellexpand = "3"
serde_json = "1"
